--- a/event_admin/templates/event_admin/event-admin.html
+++ b/event_admin/templates/event_admin/event-admin.html
@@ -1,25 +1,23 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
-<h2 class="text-center page-header-bg">Admin Panel</h2>
-{% endblock %}
-
 {% block content %}
 
-<section class="container event-mgmt">
-    <div class="my-5">
-        <h4 class="mb-3">Contact requests</h4>
-        {% include 'includes/contact-requests.html' %}
+<section>
+    <h2 class="text-center page-header-bg">Admin Panel</h2>
+    <div class="container event-mgmt">
+        <div class="my-5">
+            <h4 class="mb-3">Contact requests</h4>
+            {% include 'includes/contact-requests.html' %}
+        </div>
+
+        <hr>
+
+        <div class="my-5">
+            <h4 class="mb-3">Event Management</h4>
+            {% include 'includes/events-mgmt.html' %}
+        </div>
     </div>
-
-    <hr>
-
-    <div class="my-5">
-        <h4 class="mb-3">Event Management</h4>
-        {% include 'includes/events-mgmt.html' %}
-    </div>
-
 </section>
 
 {% endblock %}
