--- a/events/templates/events/add-event.html
+++ b/events/templates/events/add-event.html
@@ -2,45 +2,44 @@
 {% load static %}
 {% load crispy_forms_field %}
 
-{% block page_header %}
-<h2 class="text-center page-header-bg">Create Event</h2>
-{% endblock %}
-
 {% block content %}
-<div class="container add-edit-event">
-    <form action="{% url 'add_event' %}" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="row form-custom form-group">
-            <div class="col-12 col-md-10 offset-md-1">
-                {{ form.title|as_crispy_field }}
+<section>
+    <h2 class="text-center page-header-bg">Create Event</h2>
+    <div class="container add-edit-event">
+        <form action="{% url 'add_event' %}" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <div class="row form-custom form-group">
+                <div class="col-12 col-md-10 offset-md-1">
+                    {{ form.title|as_crispy_field }}
+                </div>
+                <div class="col-12 col-md-10 offset-md-1">
+                    {{ form.description|as_crispy_field }}
+                </div>
+                <div class="col-12 col-md-5 offset-md-1">
+                    {{ form.event_date|as_crispy_field }}
+                    <span class="text-muted helper-text">Format expected DD/MM/YYYY</span>
+                </div>
+                <div class="col-12 col-md-5">
+                    {{ form.event_time|as_crispy_field }}
+                    <span class="text-muted helper-text">Format expected HH:MM 24h</span>
+                </div>
+                <div class="col-12 col-md-5 offset-md-1">
+                    {{ form.event_location|as_crispy_field }}
+                </div>
+                <div class="col-12 col-md-5">
+                    {{ form.event_price|as_crispy_field }}
+                </div>
+                <div class="col-12 col-md-10 offset-md-1">
+                    {{ form.event_contact|as_crispy_field }}
+                </div>
+                <div class="col-12 col-md-10 offset-md-1">
+                    {{ form.event_category|as_crispy_field }}
+                </div>
+                <div class="col-12 col-md-10 offset-md-1 text-center">
+                    <button type="submit" class="mt-4">Create Event</button>
+                </div>
             </div>
-            <div class="col-12 col-md-10 offset-md-1">
-                {{ form.description|as_crispy_field }}
-            </div>
-            <div class="col-12 col-md-5 offset-md-1">
-                {{ form.event_date|as_crispy_field }}
-                <span class="text-muted helper-text">Format expected DD/MM/YYYY</span>
-            </div>
-            <div class="col-12 col-md-5">
-                {{ form.event_time|as_crispy_field }}
-                <span class="text-muted helper-text">Format expected HH:MM 24h</span>
-            </div>
-            <div class="col-12 col-md-5 offset-md-1">
-                {{ form.event_location|as_crispy_field }}
-            </div>
-            <div class="col-12 col-md-5">
-                {{ form.event_price|as_crispy_field }}
-            </div>
-            <div class="col-12 col-md-10 offset-md-1">
-                {{ form.event_contact|as_crispy_field }}
-            </div>
-            <div class="col-12 col-md-10 offset-md-1">
-                {{ form.event_category|as_crispy_field }}
-            </div>
-            <div class="col-12 col-md-10 offset-md-1 text-center">
-                <button type="submit" class="mt-4">Create Event</button>
-            </div>
-        </div>
-    </form>
-</div>
+        </form>
+    </div>
+</section>
 {% endblock %}
