--- a/events/templates/events/edit-event.html
+++ b/events/templates/events/edit-event.html
@@ -2,15 +2,13 @@
 {% load static %}
 {% load crispy_forms_field %}
 
-{% block page_header %}
-<h2 class="text-center page-header-bg">Edit Event</h2>
-{% endblock %}
-
 {% block content %}
-<div class="container add-edit-event">
-    <form action="{% url 'edit_event' event.id %}" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="row form-custom form-group">
+<section>
+    <h2 class="text-center page-header-bg">Edit Event</h2>
+    <div class="container add-edit-event">
+        <form action="{% url 'edit_event' event.id %}" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <div class="row form-custom form-group">
                 <div class="col-12 col-md-10 offset-md-1">
                     {{ form.title|as_crispy_field }}
                 </div>
@@ -40,7 +38,8 @@
                 <div class="col-12 col-md-10 offset-md-1 text-center">
                     <button type="submit" class="mt-4">Edit event</button>
                 </div>
-        </div>
-    </form>
-</div>
+            </div>
+        </form>
+    </div>
+</section>
 {% endblock %}
