--- a/events/templates/events/event-detail.html
+++ b/events/templates/events/event-detail.html
@@ -1,74 +1,72 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
-<h2 class="text-center page-header-bg">{{ event.title }}</h2>
-{% endblock %}
-
 {% block content %}
-<section class="container event-detail">
-    <div class="row">
-        <div class="bg-light-gray shadow-sm card event-detail__wrapper">
-            <!-- Event description -->
-            <div class="col-12 text-muted my-4">
-                {{ event.description }}
-            </div>
+<section>
+    <h2 class="text-center page-header-bg">{{ event.title }}</h2>
+    <div class="container event-detail">
+        <div class="row">
+            <div class="bg-light-gray shadow-sm card event-detail__wrapper">
+                <!-- Event description -->
+                <div class="col-12 text-muted my-4">
+                    {{ event.description }}
+                </div>
 
-            <hr>
+                <hr>
 
-            <!-- Event category -->
-            <div class="col-12 my-4">
-                <h4><span class="badge card-content__badge">{{ event.event_category }}</span></h4>
-            </div>
+                <!-- Event category -->
+                <div class="col-12 my-4">
+                    <h4><span class="badge card-content__badge">{{ event.event_category }}</span></h4>
+                </div>
 
-            <!-- Event details -->
-            <div class="col-12 pt-2 pb-3">
-                {% if event.event_date %}
-                <div class="card-content__key fw-bolder">
-                    <p>Date:</p>
+                <!-- Event details -->
+                <div class="col-12 pt-2 pb-3">
+                    {% if event.event_date %}
+                    <div class="card-content__key fw-bolder">
+                        <p>Date:</p>
+                    </div>
+                    <div class="card-content__value">
+                        <p>{{ event.event_date }}</p>
+                    </div>
+                    {% else %}
+                    <div style="display: block;"></div>
+                    {% endif %}
+                    {% if event.event_time %}
+                    <div class="card-content__key fw-bolder">
+                        <p>Time:</p>
+                    </div>
+                    <div class="card-content__value">
+                        <p>{{ event.event_time }}</p>
+                    </div>
+                    {% else %}
+                    <div style="display: block;"></div>
+                    {% endif %}
+                    {% if event.event_location %}
+                    <div class="card-content__key fw-bolder">
+                        <p>Location:</p>
+                    </div>
+                    <div class="card-content__value">
+                        <p>{{ event.event_location }}</p>
+                    </div>
+                    {% else %}
+                    <div style="display: block;"></div>
+                    {% endif %}
+                    <div class="card-content__key fw-bolder">
+                        <p>Price:</p>
+                    </div>
+                    <div class="card-content__value">
+                        <p>{{ event.event_price }}</p>
+                    </div>
+                    <div class="card-content__key fw-bolder">
+                        <p>Contact:</p>
+                    </div>
+                    <div class="card-content__value">
+                        <p>{{ event.event_contact }}</p>
+                    </div>
                 </div>
-                <div class="card-content__value">
-                    <p>{{ event.event_date }}</p>
-                </div>
-                {% else %}
-                <div style="display: block;"></div>
-                {% endif %}
-                {% if event.event_time %}
-                <div class="card-content__key fw-bolder">
-                    <p>Time:</p>
-                </div>
-                <div class="card-content__value">
-                    <p>{{ event.event_time }}</p>
-                </div>
-                {% else %}
-                <div style="display: block;"></div>
-                {% endif %}
-                {% if event.event_location %}
-                <div class="card-content__key fw-bolder">
-                    <p>Location:</p>
-                </div>
-                <div class="card-content__value">
-                    <p>{{ event.event_location }}</p>
-                </div>
-                {% else %}
-                <div style="display: block;"></div>
-                {% endif %}
-                <div class="card-content__key fw-bolder">
-                    <p>Price:</p>
-                </div>
-                <div class="card-content__value">
-                    <p>{{ event.event_price }}</p>
-                </div>
-                <div class="card-content__key fw-bolder">
-                    <p>Contact:</p>
-                </div>
-                <div class="card-content__value">
-                    <p>{{ event.event_contact }}</p>
-                </div>
-            </div>
 
-            <div class="event-detail__buttons my-2">
-                {% if request.user.is_superuser %}
+                <div class="event-detail__buttons my-2">
+                    {% if request.user.is_superuser %}
                     <div class="d-flex justify-content-center align-items-center my-4">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary"><a
@@ -77,14 +75,16 @@
                                     href="{% url 'delete_event' event.id %}">Delete this event</a></button>
                         </div>
                     </div>
-                {% endif %}
+                    {% endif %}
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="col-12 text-center mt-4 mb-3 return-to-events">
-        <p class="pt-2"><i class="fas fa-undo-alt text-purple-custom"></i><a href="{% url 'events' %}"> Return to all
-            events</a></p>
+        <div class="col-12 text-center mt-4 mb-3 return-to-events">
+            <p class="pt-2"><i class="fas fa-undo-alt text-purple-custom"></i><a href="{% url 'events' %}"> Return to
+                all
+                events</a></p>
+        </div>
     </div>
 </section>
 {% endblock %}
