--- a/events/templates/events/events.html
+++ b/events/templates/events/events.html
@@ -1,18 +1,15 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
-<h2 class="text-center page-header-bg">Local Events</h2>
-{% endblock %}
-
 {% block content %}
 <section>
+    <h2 class="text-center page-header-bg">Local Events</h2>
     <!--  Search bar and filter  -->
     <div class="container filter-search">
         <div class="row justify-content-center">
             <div class="col-12 col-md-3 order-2">
                 <div class="d-flex justify-content-center align-items-center pt-3">
-                    <div class="btn btn-sm btn-secondary filter-search__filter-btn dropdown-toggle" id="dropdownFilter"
+                    <div class="btn btn-sm btn-secondary filter-search__filter-btn dropdown-toggle" role="listbox" id="dropdownFilter"
                          data-bs-toggle="dropdown" aria-expanded="false">
                             <span id="filter-value-js">Filter</span>
                     </div>
@@ -53,7 +50,7 @@
             <div class="row row-cols-1 row-cols-md-2 g-4 mb-4">
                 {% for event in page_obj %}
                 <div class="col">
-                    <div class="card shadow-sm h-100">
+                    <div class="card card-content shadow-sm h-100">
                         <div class="card-body bg-light-gray">
                             <!-- Event title -->
                             <h5 class="card-title card-content__title my-3 fw-bolder">{{ event.title }}</h5>
@@ -117,9 +114,7 @@
                             <!-- Card buttons -->
                             <div class="d-flex justify-content-end align-items-center pt-3">
                                 <div class="btn-group">
-                                    <a href="{% url 'event_detail' event.id %}">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                    </a>
+                                    <button type="button" class="btn btn-sm btn-outline-secondary"><a href="{% url 'event_detail' event.id %}">View</a></button>
                                 </div>
                             </div>
                         </div>
