--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -2,48 +2,54 @@
 {% load static %}
 {% load crispy_forms_field %}
 
-{% block page_header %}
-<h2 class="text-center page-header-bg">Hello, {{ profile.user }}</h2>
-{% endblock %}
-
 {% block content %}
 
 <!-- Profile -->
 <!--Design inspired by https://themes.getbootstrap.com/preview/?theme_id=85897-->
-<div class="container my-profile shadow-sm">
-    <ul class="nav nav-tabs" id="myTab" role="tablist">
-        <li class="nav-item col-12 col-md-3" role="presentation">
-            <button class="nav-link active fw-bolder my-profile__tab" id="home-tab" data-bs-toggle="tab" data-bs-target="#account" type="button"
-                    role="tab" aria-controls="account" aria-selected="true">Account
-            </button>
-        </li>
-        <li class="nav-item col-12 col-md-3" role="presentation">
-            <button class="nav-link fw-bolder my-profile__tab" id="profile-tab" data-bs-toggle="tab" data-bs-target="#posts" type="button"
-                    role="tab" aria-controls="posts" aria-selected="false">My Events
-            </button>
-        </li>
-        <li class="nav-item col-12 col-md-3" role="presentation">
-            <button class="nav-link fw-bolder my-profile__tab" id="contact-tab" data-bs-toggle="tab" data-bs-target="#settings" type="button"
-                    role="tab" aria-controls="settings" aria-selected="false">Settings
-            </button>
-        </li>
-    </ul>
-    <hr class="my-profile__divider">
-    <div class="tab-content" id="myTabContent">
-        <!-- My details -->
-        <div class="tab-pane fade show active" id="account" role="tabpanel" aria-labelledby="account-tab">
-            {% include 'includes/profile-details.html' %}
+<section>
+    <h2 class="text-center page-header-bg">Hello, {{ profile.user }}</h2>
+    <!-- Tabs -->
+    <article class="container my-profile shadow-sm">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item col-12 col-md-3" role="presentation">
+                <button class="nav-link active fw-bolder my-profile__tab" id="home-tab" data-bs-toggle="tab"
+                        data-bs-target="#account" type="button"
+                        role="tab" aria-controls="account" aria-selected="true">Account
+                </button>
+            </li>
+            <li class="nav-item col-12 col-md-3" role="presentation">
+                <button class="nav-link fw-bolder my-profile__tab" id="profile-tab" data-bs-toggle="tab"
+                        data-bs-target="#posts" type="button"
+                        role="tab" aria-controls="posts" aria-selected="false">My Events
+                </button>
+            </li>
+            <li class="nav-item col-12 col-md-3" role="presentation">
+                <button class="nav-link fw-bolder my-profile__tab" id="contact-tab" data-bs-toggle="tab"
+                        data-bs-target="#settings" type="button"
+                        role="tab" aria-controls="settings" aria-selected="false">Settings
+                </button>
+            </li>
+        </ul>
+
+        <hr class="my-profile__divider">
+
+        <!-- Tab content -->
+        <div class="tab-content" id="myTabContent">
+            <!-- My details -->
+            <div class="tab-pane fade show active" id="account" role="tabpanel" aria-labelledby="account-tab">
+                {% include 'includes/profile-details.html' %}
+            </div>
+            <!-- My posts -->
+            <div class="tab-pane fade my-posts" id="posts" role="tabpanel" aria-labelledby="posts-tab">
+                {% include 'includes/profile-posts.html' %}
+            </div>
+            <!-- Settings -->
+            <div class="tab-pane fade" id="settings" role="tabpanel" aria-labelledby="settings-tab">
+                {% include 'includes/profile-settings.html' %}
+            </div>
         </div>
-        <!-- My posts -->
-        <div class="tab-pane fade my-posts" id="posts" role="tabpanel" aria-labelledby="posts-tab">
-            {% include 'includes/profile-posts.html' %}
-        </div>
-        <!-- Settings -->
-        <div class="tab-pane fade" id="settings" role="tabpanel" aria-labelledby="settings-tab">
-            {% include 'includes/profile-settings.html' %}
-        </div>
-    </div>
-</div>
+    </article>
+</section>
 {% endblock %}
 
 {% block postload_js %}
