--- a/static/css/_card.scss
+++ b/static/css/_card.scss
@@ -1,4 +1,5 @@
 .card-content {
+
   &__title {
     color: $prim-colour;
   }
@@ -36,3 +37,10 @@
     width: 57%;
   }
 }
+
+.btn-group {
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+  }
