--- a/events/templates/events/events.html
+++ b/events/templates/events/events.html
@@ -114,7 +114,7 @@
                             <!-- Card buttons -->
                             <div class="d-flex justify-content-end align-items-center pt-3">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary"><a href="{% url 'event_detail' event.id %}">View</a></button>
+                                    <a class="btn btn-sm btn-outline-secondary" href="{% url 'event_detail' event.id %}" role="button">View</a>
                                 </div>
                             </div>
                         </div>
