--- a/events/templates/events/preview-event.html
+++ b/events/templates/events/preview-event.html
@@ -69,10 +69,8 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-10 offset-md-1 text-center my-4">
-                    <a href="{% url 'checkout' %}">
-                        <button type="button" class="btn btn-green btn-md px-4"><i class="fas fa-lock"></i> Proceed to
-                            payment
-                        </button>
+                    <a class="btn btn-green btn-md px-4" href="{% url 'checkout' %}" role="button">
+                        <i class="fas fa-lock"></i> Proceed to payment
                     </a>
                 </div>
             </div>
