--- a/profiles/templates/includes/profile-settings.html
+++ b/profiles/templates/includes/profile-settings.html
@@ -22,7 +22,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-green" data-bs-dismiss="modal">Cancel</button>
-                <a href="{% url 'delete_profile' request.user.username %}" class="btn btn-green">Yes, deactivate account</a>
+                <a href="{% url 'delete_profile' request.user.username %}" class="btn btn-green" role="button">Yes, deactivate account</a>
             </div>
         </div>
     </div>
