--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -1,43 +1,42 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
-<h2 class="text-center page-header">Review your order</h2>
-{% endblock %}
-
 {% block content %}
 
 <!-- Checkout -->
-<section class="container checkout">
-    <div class="row mb-8 bg-light p-3">
-        <div class="col-12 col-md-6 checkout__item">
-            <p class="fw-bolder">Item</p>
-            <p>Our Neighbourhood Event Post</p>
+<section>
+    <h2 class="text-center page-header">Review your order</h2>
+    <div class="container checkout">
+        <div class="row mb-8 bg-light p-3">
+            <div class="col-12 col-md-6 checkout__item">
+                <p class="fw-bolder">Item</p>
+                <p>Our Neighbourhood Event Post</p>
+            </div>
+            <div class="col-12 col-md-6 checkout__amount">
+                <p class="fw-bolder">Amount</p>
+                <p>€1.00</p>
+            </div>
         </div>
-        <div class="col-12 col-md-6 checkout__amount">
-            <p class="fw-bolder">Amount</p>
-            <p>€1.00</p>
-        </div>
-    </div>
 
-    <hr class="my-5">
+        <hr class="my-5">
 
-    <h5><i class="fas fa-credit-card"></i> Payment Details</h5>
+        <h5><i class="fas fa-credit-card"></i> Payment Details</h5>
 
-    <div class="row my-5">
-        <div class="col checkout__pay-form">
-            <p class="text-start py-3">Credit or debit card</p>
-            <!-- Stripe payment form-->
-            <form action="{% url 'checkout' %}" method="POST" id="payment-form">
-                {% csrf_token %}
-                <div class="my-3" id="card-element">
-                    <!-- Elements will create input elements here -->
-                </div>
-                <!-- We'll put the error messages in this element -->
-                <div id="card-errors" role="alert"></div>
+        <div class="row my-5">
+            <div class="col checkout__pay-form">
+                <p class="text-start py-3">Credit or debit card</p>
+                <!-- Stripe payment form-->
+                <form action="{% url 'checkout' %}" method="POST" id="payment-form">
+                    {% csrf_token %}
+                    <div class="my-3" id="card-element">
+                        <!-- Elements will create input elements here -->
+                    </div>
+                    <!-- We'll put the error messages in this element -->
+                    <div id="card-errors" role="alert"></div>
 
-                <button class="btn btn-green my-3" id="submit-button">Pay with Stripe</button>
-            </form>
+                    <button class="btn btn-green my-3" id="submit-button">Pay with Stripe</button>
+                </form>
+            </div>
         </div>
     </div>
 </section>
