--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -19,6 +19,13 @@
             </form>
         </div>
     </div>
+    <div class="row">
+        <div class="col-12 col-md-10 offset-md-1 text-center">
+            <div class="my-4">
+                <a href="{% url 'profile' %}" class="btn btn-outline-sec-colour btn-md px-4">Return to Profile</a>
+            </div>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
