Fix CSS events page and checkout success page

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -7,7 +7,7 @@
 <section>
     <h2 class="text-center page-header-bg">Thank you!</h2>
     <div class="container checkout-success">
-        <div class="row mb-8 bg-light m-3 text-center">
+        <div class="row mb-8 m-3 text-center">
             <div class="col-12">
                 <p>Thank you for your payment. A confirmation email will be sent to {{ user_from_allauth_email_address}}</p>
             </div>
