--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -20,24 +20,21 @@
 
         <hr class="my-5">
 
-        <h5><i class="fas fa-credit-card"></i> Payment Details</h5>
+        <h5><i class="fas fa-credit-card mb-5"></i> Payment Details</h5>
 
-        <div class="row my-5">
-            <div class="col checkout__pay-form">
-                <p class="text-start py-3">Credit or debit card</p>
-                <!-- Stripe payment form-->
-                <form action="{% url 'checkout' %}" method="POST" id="payment-form">
-                    {% csrf_token %}
-                    <div class="my-3" id="card-element">
-                        <!-- Elements will create input elements here -->
-                    </div>
-                    <!-- We'll put the error messages in this element -->
-                    <div id="card-errors" role="alert"></div>
-
-                    <button class="btn btn-green my-3" id="submit-button">Pay with Stripe</button>
-                </form>
+    </div>
+    <!-- Stripe payment form-->
+    <div class="checkout__pay-form">
+        <p class="py-3">Credit or debit card</p>
+        <form action="{% url 'checkout' %}" method="POST" id="payment-form">
+            {% csrf_token %}
+            <div class="my-3" id="card-element">
+                <!-- Elements will create input elements here -->
             </div>
-        </div>
+            <!-- We'll put the error messages in this element -->
+            <div id="card-errors" role="alert"></div>
+            <button class="btn btn-green my-3" id="submit-button">Pay with Stripe</button>
+        </form>
     </div>
 </section>
 
