--- a/static/css/style.css
+++ b/static/css/style.css
@@ -647,4 +647,12 @@ hr {
   background-color: rgba(108, 117, 125, 0.1);
 }
 
+@font-face {
+  font-family: "Pacifico";
+  font-style: normal;
+  font-weight: 400;
+  src: local("Pacifico Regular"), local("Pacifico-Regular"), url(https://fonts.gstatic.com/s/pacifico/v12/FwZY7-Qmy14u9lezJ-6H6MmBp0u-.woff2) format("woff2");
+  font-display: swap;
+}
+
 /*# sourceMappingURL=style.css.map */
