--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -100,3 +100,12 @@ hr {
 .bg-light-gray {
   background-color: rgba($gray, 0.1);
 }
+
+//Google Lighthouse instruction to avoid displaying invisible text while the custom font loads
+@font-face {
+  font-family: 'Pacifico';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Pacifico Regular'), local('Pacifico-Regular'), url(https://fonts.gstatic.com/s/pacifico/v12/FwZY7-Qmy14u9lezJ-6H6MmBp0u-.woff2) format('woff2');
+  font-display: swap;
+}
